fixed overflow behaviour

--- a/css/about.css
+++ b/css/about.css
@@ -1,13 +1,8 @@
-/* .padding:first-child {
-  margin-top: 35.5rem !important;
-} */
-
-/* .container div {
-  margin-bottom: 3rem;
-} */
+body {
+  overflow-y: scroll;
+}
 .wrapper {
   height: 100vh !important;
-  overflow-y: scroll;
 }
 
 .card {
