--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,8 @@
+body {
+  overflow-y: scroll;
+}
 .wrapper {
   height: 100vh !important;
-  overflow-y: scroll;
 }
 
 .card.first {
